log/nodejs/nodejs_api_error.log
2025-09-24T11:10:50.933Z [error] : Error : WHERE parameter "id" has invalid "undefined" value Error: WHERE parameter "id" has invalid "undefined" value
    at PostgresQueryGenerator.whereItemQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1746:13)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1737:25
    at Array.forEach (<anonymous>)
    at PostgresQueryGenerator.whereItemsQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1735:35)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1843:30
    at Array.map (<anonymous>)
    at PostgresQueryGenerator._whereGroupBind (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1842:21)
    at PostgresQueryGenerator.whereItemQuery (/home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1793:19)
    at /home/acewebx/Documents/GitLab/blue-sky-node-api/blue-sky-tie-down-node-api/node_modules/sequelize/lib/dialects/abstract/query-generator.js:1737:25
    at Array.forEach (<anonymous>) 
2025-09-24T11:24:22.506Z [error] : uncaughtException: Unexpected token ';'
/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/controllers/company.controller.js:186
  });
    ^

SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js:3:27)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10) {"error":{},"stack":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/controllers/company.controller.js:186\n  });\n    ^\n\nSyntaxError: Unexpected token ';'\n    at wrapSafe (node:internal/modules/cjs/loader:1378:20)\n    at Module._compile (node:internal/modules/cjs/loader:1428:41)\n    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)\n    at Module.load (node:internal/modules/cjs/loader:1288:32)\n    at Module._load (node:internal/modules/cjs/loader:1104:12)\n    at Module.require (node:internal/modules/cjs/loader:1311:19)\n    at require (node:internal/modules/helpers:179:18)\n    at Object.<anonymous> (/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js:3:27)\n    at Module._compile (node:internal/modules/cjs/loader:1469:14)\n    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)","exception":true,"date":"Wed Sep 24 2025 16:54:22 GMT+0530 (India Standard Time)","process":{"pid":387042,"uid":1000,"gid":1000,"cwd":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api","execPath":"/home/parul/.nvm/versions/node/v20.18.0/bin/node","version":"v20.18.0","argv":["/home/parul/.nvm/versions/node/v20.18.0/bin/node","/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/index.js"],"memoryUsage":{"rss":151113728,"heapTotal":90542080,"heapUsed":62971360,"external":6993483,"arrayBuffers":3471915}},"os":{"loadavg":[1.02,1.19,1.27],"uptime":26647.6},"trace":[{"column":20,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1378,"method":null,"native":false},{"column":41,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1428,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Module._extensions..js","line":1548,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1288,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module._load","line":1104,"method":"_load","native":false},{"column":19,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1311,"method":"require","native":false},{"column":18,"file":"node:internal/modules/helpers","function":"require","line":179,"method":null,"native":false},{"column":27,"file":"/home/parul/Documents/Project/Taylor/Blue-sky/blue-sky-tie-down-node-api/api/v1.0.1/routes/company.routes.js","function":null,"line":3,"method":null,"native":false},{"column":14,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1469,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Module._extensions..js","line":1548,"method":".js","native":false}]}
